--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Jogo Mundo do Autista</title>
     <script src="js/phaser.js">    </script>
 
   </head>
